[gd_scene load_steps=10 format=3 uid="uid://cdet7w3yrnwpp"]

[ext_resource type="Script" path="res://Character/PlayerCharacter/GD_BasePlayerChacter.gd" id="1_jepcu"]
[ext_resource type="PackedScene" uid="uid://dsskmi02nper0" path="res://Character/PlayerCharacter/Ui/S_GaugeBar.tscn" id="2_paamt"]
[ext_resource type="PackedScene" uid="uid://b3336qy45wd22" path="res://Character/PlayerCharacter/Skills/Move/S_Move.tscn" id="2_soi43"]
[ext_resource type="Texture2D" uid="uid://cjbmoq0aa6wof" path="res://Character/PlayerCharacter/PC1/Sprite-0002.png" id="3_2g75g"]

[sub_resource type="Theme" id="Theme_v5ygx"]

[sub_resource type="Animation" id="Animation_h4dee"]
resource_name = "Idle"
length = 0.750004
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.500004, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_h5pqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_q4stp"]
resource_name = "Walk"
length = 0.750004
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmd81"]
_data = {
"Idle": SubResource("Animation_h4dee"),
"RESET": SubResource("Animation_h5pqb"),
"Walk": SubResource("Animation_q4stp")
}

[node name="S_PC1" type="Node2D" groups=["character"]]
script = ExtResource("1_jepcu")
start_atk = null
start_def = null
start_speed = null
start_max_health = null
move = ExtResource("2_soi43")
start_direction = null
start_cood = null

[node name="S_GaugeBar" parent="." instance=ExtResource("2_paamt")]
offset_left = -18.0
offset_top = -58.0
offset_right = -18.0
offset_bottom = -58.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -45.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_v5ygx")
alignment = 2

[node name="Move" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Move"

[node name="Basic_atk" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Basic Atk"

[node name="Weapon_Skill" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Skill_1
"

[node name="Character_Skill" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Skill_2
"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 99
texture_filter = 1
texture = ExtResource("3_2g75g")
offset = Vector2(0, -20)
hframes = 6
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_xmd81")
}

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true
